Fixes for project feedback
+ Fix onGetRidesSuccess and onAuthGetRidesSuccess to
  + define tempDate and date as empty strings so substring method
    will not attempt to operate on a null object
  + add if statement for same condition ^
+ Add 'No rides yet' message in all rides output for when no rides
  are created yet
+ Remove top-margin from auth message (was overlapping auth dropdown)

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -39,7 +39,6 @@ header {
 
 .auth-message {
   font-size: 22px;
-  margin-top: -50px;
   text-align: center;
 }
 
